--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "lingo.dev": "^0.128.0",
+    "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "react": "19.2.3",
+    "react-advanced-cropper": "^0.20.1",
     "react-dom": "19.2.3",
+    "react-easy-crop": "^5.5.6",
     "react-webcam": "^7.2.0",
     "tesseract.js": "^7.0.0"
   },
@@ -20,6 +24,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-speech-kit": "^3.0.0",
+    "@types/react-webcam": "^1.1.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
