--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google-cloud/vision": "^5.3.4",
+    "@huggingface/inference": "^4.13.11",
     "lingo.dev": "^0.128.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
