--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lingo.dev": "^0.128.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "next-pwa": "^5.6.0",
     "react": "19.2.3",
     "react-advanced-cropper": "^0.20.1",
     "react-dom": "19.2.3",
