--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@huggingface/inference": "^4.13.11",
     "html-to-image": "^1.11.13",
     "lingo.dev": "^0.128.0",
+    "lru-cache": "^11.2.5",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "next-pwa": "^5.6.0",
