--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@google-cloud/vision": "^5.3.4",
     "@huggingface/inference": "^4.13.11",
     "html-to-image": "^1.11.13",
-    "lingo.dev": "^0.128.0",
+    "lingo.dev": "^0.131.0",
     "lru-cache": "^11.2.5",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
@@ -35,5 +35,13 @@
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "overrides": {
+    "next": "$next",
+    "tmp": "^0.2.5",
+    "@modelcontextprotocol/sdk": "^1.26.0",
+    "diff": "^8.0.3",
+    "fast-xml-parser": "^5.3.4",
+    "lodash": "^4.17.23"
   }
 }
